<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LogInActivity"
    android:theme="@style/Zealand">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        >

        <EditText
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="E-Mail"
            android:id="@+id/loginEmailEditText"
            android:inputType="textEmailAddress"
            android:textSize="30sp"/>

        <EditText
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="Password"
            android:id="@+id/loginPasswordEditText"
            android:inputType="textPassword"
            android:textSize="30sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="Login"
            android:id="@+id/loginButton"
            android:onClick="loginButtonPressed"
            android:textSize="30sp"
            android:textColor="@color/colorAccent"
            />

    </LinearLayout>





    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        android:id="@+id/progressbar"
        android:indeterminateTint="@color/zealandgul"/>

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/loginErrorText"/>



</LinearLayout>